# limits_of_detection

./: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  format.sh
cmake/: limits_of_detectionConfig.cmake.in
include/: limits_of_detection.hpp
src/: example_1.cpp  limits_of_detection.cpp
